@@ -191,7 +191,7 @@ scm_class_of (SCM x)
 		{
 		  SCM name = SCM_STRUCT_TABLE_NAME (SCM_CDR (handle));
 		  SCM class = scm_make_extended_class (SCM_NFALSEP (name)
-						       ? SCM_ROCHARS (name)
+						       ? SCM_SYMBOL_CHARS (name)
 						       : 0);
 		  SCM_SET_STRUCT_TABLE_CLASS (SCM_CDR (handle), class);
 		  return class;
